<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/sea"
    android:padding="20dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/text_background"
        android:id="@+id/firstName"
        android:hint="@string/first_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/text_background"
        android:id="@+id/lastName"
        android:hint="@string/last_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/firstName"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/text_background"
        android:id="@+id/emailCreate"
        android:layout_marginTop="30dp"
        android:hint="@string/Email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_below="@id/lastName"

        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/emailCreate"
        android:id="@+id/passwordCreate"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_background"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/passwordCreate"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_background"
        android:text="@string/create"
        android:id="@+id/createButton"
        />

</RelativeLayout>