<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/sea"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:orientation="vertical">
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        />
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_background"
        android:textSize="20sp"
        android:id="@+id/email_login"
        android:inputType="textEmailAddress"
        android:padding="12dp"

        />
    <EditText
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/password_login"
        android:background="@drawable/text_background"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:hint="@string/password"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/loginButton"
        android:gravity="center"
        android:background="@drawable/button_background"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:text="Don't have an account? \nClick here"
        android:textSize="20sp"
        android:id="@+id/signIn"
        android:padding="12dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:textStyle="bold"
        />
    </LinearLayout>
</ScrollView>