<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:text="All information"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/all_information"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/all_information"
        android:text="@string/detail"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:id="@+id/detail_title_edit_task"
        android:textStyle="bold"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/detail_title_edit_task"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:id="@+id/detail_edit_task"
        android:text="temp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/detail_edit_task"
        android:text="@string/assignedto"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:id="@+id/assign_title_edit_task"
        android:textStyle="bold"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/assign_title_edit_task"
        android:textSize="20sp"
        android:id="@+id/assign_edit_task"
        android:layout_marginLeft="20dp"
        android:text="temp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/assign_edit_task"
        android:text="@string/date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/date_title_edit_task"
        android:textStyle="bold"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/date_title_edit_task"
        android:id="@+id/date_edit_task"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:text="temp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/date_edit_task"
        android:text="@string/closed_date"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:id="@+id/closed_date_edit_task"
        android:textStyle="bold"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/closed_date_edit_task"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:text="temp"
        android:layout_marginBottom="20dp"
        />


</RelativeLayout>