<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Dashboard"
    android:background="@color/smoothBlue"
    tools:showIn="@layout/app_bar_dashboard">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="95dp"
        android:text="@string/this_month"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:id="@+id/this_month"
        />
<TextView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_below="@id/this_month"
    android:id="@+id/number_open_activity_this_month"
    android:text="5"
    android:layout_marginLeft="3dp"
    android:textColor="@color/colorPrimary"
    android:textSize="50sp"
    />
    <TextView
        android:text="@string/open_activities"
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/number_open_activity_this_month"
        android:id="@+id/this_month_open_activity"
        android:layout_below="@+id/this_month"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/this_month"
        android:id="@+id/number_close_activity_this_month"
        android:text="5"
        android:layout_toRightOf="@id/this_month_open_activity"

        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/close_activity"
        android:id="@+id/close_activity_this_month"
        android:layout_below="@id/this_month"
        android:layout_toRightOf="@+id/number_close_activity_this_month"

        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/this_month"
        android:id="@+id/number_late_activity_this_month"
        android:text="5"
        android:layout_toRightOf="@id/close_activity_this_month"

        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/late_activity_this_month"
        android:layout_toRightOf="@id/number_late_activity_this_month"
        android:layout_below="@id/this_month"
        android:text="@string/late_activities"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_this_month"
        android:layout_below="@id/number_close_activity_this_month"
        android:background="@color/white"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:id="@+id/this_season"
        android:layout_below="@id/number_close_activity_this_month"
        android:text="@string/this_season"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/this_season"
        android:id="@+id/number_open_activity_this_season"
        android:text="5"
        android:layout_marginLeft="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:text="@string/open_activities"
        android:layout_height="wrap_content"
        android:layout_width="90sp"
        android:id="@+id/this_season_open_activity"
        android:layout_below="@+id/this_season"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/number_open_activity_this_season"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/this_season"
        android:id="@+id/number_close_activity_this_season"
        android:text="5"
        android:layout_toRightOf="@id/this_season_open_activity"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/close_activity"
        android:id="@+id/close_activity_this_season"
        android:layout_below="@id/this_season"
        android:layout_toRightOf="@+id/number_close_activity_this_season"

        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/this_season"
        android:id="@+id/number_late_activity_this_season"
        android:text="5"
        android:layout_toRightOf="@id/close_activity_this_season"

        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/late_activity_this_season"
        android:layout_toRightOf="@id/number_late_activity_this_season"
        android:layout_below="@id/this_season"
        android:text="@string/late_activities"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_this_season"
        android:layout_below="@id/number_close_activity_this_season"
        android:background="@color/white"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="70dp"
        android:id="@+id/global"
        android:layout_below="@id/close_activity_this_season"
        android:text="@string/global"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/global"
        android:id="@+id/number_open_activity_global"
        android:text="5"
        android:layout_marginLeft="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:text="@string/open_activities"
        android:layout_height="wrap_content"
        android:layout_width="90sp"
        android:id="@+id/global_open_activity"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/number_open_activity_global"
        android:layout_below="@+id/global"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/global"
        android:id="@+id/number_close_activity_global"
        android:text="5"
        android:layout_toRightOf="@id/this_season_open_activity"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/close_activity"
        android:id="@+id/close_activity_global"
        android:layout_below="@id/global"
        android:layout_toRightOf="@+id/number_close_activity_global"

        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/global"
        android:id="@+id/number_late_activity_global"
        android:text="5"
        android:layout_toRightOf="@id/close_activity_global"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="90dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:id="@+id/late_activity_global"
        android:layout_toRightOf="@id/number_late_activity_global"
        android:layout_below="@id/global"
        android:text="@string/late_activities"
        />


    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/relative2"
        android:background="@color/graywhite"
        android:layout_below="@+id/number_close_activity_global"
        android:orientation="vertical"
        >
        <include layout="@layout/distribution_this_month"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            />
        <include
            layout="@layout/distribution_this_season"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"

            />
        <include
            layout="@layout/late_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="10dp"/>


    </LinearLayout>
</RelativeLayout>
</ScrollView>